--- a/classification.ipynb
+++ b/classification.ipynb
@@ -582,7 +582,7 @@
     "plt.figure()\n",
     "plt.plot(np.arange(0, epochs), H.history[\"loss\"], label=\"train_loss\")\n",
     "plt.plot(np.arange(0, epochs), H.history[\"val_loss\"], label=\"val_loss\")\n",
-    "plt.plot(np.ar  0ange(0,epochs), H.history[\"accuracy\"], label=\"train_acc\")\n",
+    "plt.plot(np.arange(0,epochs), H.history[\"accuracy\"], label=\"train_acc\")\n",
     "plt.plot(np.arange(0,epochs), H.history[\"val_accuracy\"], label=\"val_acc\")\n",
     "plt.title(\"Training Loss and Accuracy\")\n",
     "plt.xlabel(\"Epoch #\")\n",
